deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
  labels:
    app: service1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1
          image: sworting/service1:1.0
          ports:
            - containerPort: 80
