ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services
spec:
  rules:
    - host: service1.local
      http:
        paths:
          - pathType: Prefix
            path: /service1
            backend:
              service:
                name: service1
                port:
                  number: 80
          - pathType: Prefix
            path: /service2
            backend:
              service:
                name: service2
                port:
                  number: 8080
